www/versioned_docs/version-6.11.0/API/namespaces/typedData.md
---
id: 'typedData'
title: 'Namespace: typedData'
sidebar_label: 'typedData'
sidebar_position: 0
custom_edit_url: null
---

## References

### TypedDataRevision

Re-exports [TypedDataRevision](types.RPC.RPCSPEC07.WALLET_API.md#typeddatarevision-1)

---

### StarknetEnumType

Re-exports [StarknetEnumType](types.RPC.RPCSPEC07.WALLET_API.md#starknetenumtype)

---

### StarknetMerkleType

Re-exports [StarknetMerkleType](types.RPC.RPCSPEC07.WALLET_API.md#starknetmerkletype)

---

### StarknetType

Re-exports [StarknetType](types.RPC.RPCSPEC07.WALLET_API.md#starknettype)

---

### StarknetDomain

Re-exports [StarknetDomain](../interfaces/types.RPC.RPCSPEC07.WALLET_API.StarknetDomain.md)

---

### TypedData

Re-exports [TypedData](../interfaces/types.RPC.RPCSPEC07.WALLET_API.TypedData.md)

## Functions

### prepareSelector

▸ **prepareSelector**(`selector`): `string`

Prepares the selector for use.

#### Parameters

| Name       | Type     | Description                  |
| :--------- | :------- | :--------------------------- |
| `selector` | `string` | The selector to be prepared. |

#### Returns

`string`

The prepared selector.

#### Defined in

[src/utils/typedData.ts:112](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L112)

---

### isMerkleTreeType

▸ **isMerkleTreeType**(`type`): type is StarknetMerkleType

Checks if the given Starknet type is a Merkle tree type.

#### Parameters

| Name   | Type                                                             | Description                 |
| :----- | :--------------------------------------------------------------- | :-------------------------- |
| `type` | [`StarknetType`](types.RPC.RPCSPEC07.WALLET_API.md#starknettype) | The StarkNet type to check. |

#### Returns

type is StarknetMerkleType

- True if the type is a Merkle tree type, false otherwise.

#### Defined in

[src/utils/typedData.ts:123](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L123)

---

### getDependencies

▸ **getDependencies**(`types`, `type`, `dependencies?`, `contains?`, `revision?`): `string`[]

Get the dependencies of a struct type. If a struct has the same dependency multiple times, it's only included once
in the resulting array.

#### Parameters

| Name           | Type                                                                                     | Default value     |
| :------------- | :--------------------------------------------------------------------------------------- | :---------------- |
| `types`        | `Record`\<`string`, [`StarknetType`](types.RPC.RPCSPEC07.WALLET_API.md#starknettype)[]\> | `undefined`       |
| `type`         | `string`                                                                                 | `undefined`       |
| `dependencies` | `string`[]                                                                               | `[]`              |
| `contains`     | `string`                                                                                 | `''`              |
| `revision`     | [`TypedDataRevision`](types.RPC.RPCSPEC07.WALLET_API.md#typeddatarevision-1)             | `Revision.LEGACY` |

#### Returns

`string`[]

#### Defined in

[src/utils/typedData.ts:131](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L131)

---

### encodeType

▸ **encodeType**(`types`, `type`, `revision?`): `string`

Encode a type to a string. All dependent types are alphabetically sorted.

#### Parameters

| Name       | Type                                                                                     | Default value     |
| :--------- | :--------------------------------------------------------------------------------------- | :---------------- |
| `types`    | `Record`\<`string`, [`StarknetType`](types.RPC.RPCSPEC07.WALLET_API.md#starknettype)[]\> | `undefined`       |
| `type`     | `string`                                                                                 | `undefined`       |
| `revision` | [`TypedDataRevision`](types.RPC.RPCSPEC07.WALLET_API.md#typeddatarevision-1)             | `Revision.LEGACY` |

#### Returns

`string`

#### Defined in

[src/utils/typedData.ts:189](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L189)

---

### getTypeHash

▸ **getTypeHash**(`types`, `type`, `revision?`): `string`

Get a type string as hash.

#### Parameters

| Name       | Type                                                                                     | Default value     |
| :--------- | :--------------------------------------------------------------------------------------- | :---------------- |
| `types`    | `Record`\<`string`, [`StarknetType`](types.RPC.RPCSPEC07.WALLET_API.md#starknettype)[]\> | `undefined`       |
| `type`     | `string`                                                                                 | `undefined`       |
| `revision` | [`TypedDataRevision`](types.RPC.RPCSPEC07.WALLET_API.md#typeddatarevision-1)             | `Revision.LEGACY` |

#### Returns

`string`

#### Defined in

[src/utils/typedData.ts:234](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L234)

---

### encodeValue

▸ **encodeValue**(`types`, `type`, `data`, `ctx?`, `revision?`): [`string`, `string`]

Encodes a single value to an ABI serialisable string, number or Buffer. Returns the data as tuple, which consists of
an array of ABI compatible types, and an array of corresponding values.

#### Parameters

| Name       | Type                                                                                     | Default value     |
| :--------- | :--------------------------------------------------------------------------------------- | :---------------- |
| `types`    | `Record`\<`string`, [`StarknetType`](types.RPC.RPCSPEC07.WALLET_API.md#starknettype)[]\> | `undefined`       |
| `type`     | `string`                                                                                 | `undefined`       |
| `data`     | `unknown`                                                                                | `undefined`       |
| `ctx`      | `Context`                                                                                | `{}`              |
| `revision` | [`TypedDataRevision`](types.RPC.RPCSPEC07.WALLET_API.md#typeddatarevision-1)             | `Revision.LEGACY` |

#### Returns

[`string`, `string`]

#### Defined in

[src/utils/typedData.ts:246](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L246)

---

### encodeData

▸ **encodeData**\<`T`\>(`types`, `type`, `data`, `revision?`): `string`[][]

Encode the data to an ABI encoded Buffer. The data should be a key -> value object with all the required values.
All dependent types are automatically encoded.

#### Type parameters

| Name | Type                                                                             |
| :--- | :------------------------------------------------------------------------------- |
| `T`  | extends [`TypedData`](../interfaces/types.RPC.RPCSPEC07.WALLET_API.TypedData.md) |

#### Parameters

| Name       | Type                                                                         | Default value     |
| :--------- | :--------------------------------------------------------------------------- | :---------------- |
| `types`    | `T`[``"types"``]                                                             | `undefined`       |
| `type`     | `string`                                                                     | `undefined`       |
| `data`     | `T`[``"message"``]                                                           | `undefined`       |
| `revision` | [`TypedDataRevision`](types.RPC.RPCSPEC07.WALLET_API.md#typeddatarevision-1) | `Revision.LEGACY` |

#### Returns

`string`[][]

#### Defined in

[src/utils/typedData.ts:377](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L377)

---

### getStructHash

▸ **getStructHash**\<`T`\>(`types`, `type`, `data`, `revision?`): `string`

Get encoded data as a hash. The data should be a key -> value object with all the required values.
All dependent types are automatically encoded.

#### Type parameters

| Name | Type                                                                             |
| :--- | :------------------------------------------------------------------------------- |
| `T`  | extends [`TypedData`](../interfaces/types.RPC.RPCSPEC07.WALLET_API.TypedData.md) |

#### Parameters

| Name       | Type                                                                         | Default value     |
| :--------- | :--------------------------------------------------------------------------- | :---------------- |
| `types`    | `T`[``"types"``]                                                             | `undefined`       |
| `type`     | `string`                                                                     | `undefined`       |
| `data`     | `T`[``"message"``]                                                           | `undefined`       |
| `revision` | [`TypedDataRevision`](types.RPC.RPCSPEC07.WALLET_API.md#typeddatarevision-1) | `Revision.LEGACY` |

#### Returns

`string`

#### Defined in

[src/utils/typedData.ts:412](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L412)

---

### getMessageHash

▸ **getMessageHash**(`typedData`, `account`): `string`

Get the SNIP-12 encoded message to sign, from the typedData object.

#### Parameters

| Name        | Type                                                                     |
| :---------- | :----------------------------------------------------------------------- |
| `typedData` | [`TypedData`](../interfaces/types.RPC.RPCSPEC07.WALLET_API.TypedData.md) |
| `account`   | [`BigNumberish`](types.md#bignumberish)                                  |

#### Returns

`string`

#### Defined in

[src/utils/typedData.ts:424](https://github.com/starknet-io/starknet.js/blob/v6.11.0/src/utils/typedData.ts#L424)
